three.js scene with pane for editor controls

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ThreejsParticleEditor</title>
+  <title>Three.js Particle Editor</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style type="text/css">
+    body {
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
